# devpi

./: .appveyor.yml  .gitignore  .hgignore  .hgtags  .travis.yml  487.txt  CHANGELOG  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  README.txt  conftest.py  dev-bootstrap.sh  dev-requirements.txt  development.ini  devpi-travis.passwd.gotcha@bubblenet.be.gpg  devpi-travis.passwd.holger@merlinux.eu.gpg  devpi-travis.passwd.mail@florian-schulze.net.gpg  devpi-twitter.passwd.gotcha@bubblenet.be.gpg  devpi-twitter.passwd.holger@merlinux.eu.gpg  devpi-twitter.passwd.mail@florian-schulze.net.gpg  docker-entrypoint.sh  gunicorn.conf.py  job.py  logging.conf  mypy.ini  production.ini  pyproject.toml  ruff-strict.toml  setup.py  tox.ini  x.py
client/: .flake8  AUTHORS  CHANGELOG  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
client/devpi/: __init__.py  __main__.py  config.py  getjson.py  hookspecs.py  index.py  install.py  list.py  list_remove.py  login.py  main.py  push.py  pypirc.py  quickstart.py  refresh.py  remoteindex.py  server.py  snapshot.py  test.py  upload.py  use.py  user.py
client/doc/: scenarios.txt  url.txt
client/news/: 1002.bugfix  1005.bugfix  1008.bugfix  1011.bugfix  1052.bugfix  1057.bugfix  140.feature  218.feature  361.bugfix  38.feature  386.feature  395.other  406.bugfix  437.feature  508.bugfix  523.bugfix  524.bugfix  525.feature  532.bugfix  557.bugfix  562.bugfix  565.feature  579.feature  607.bugfix  622.bugfix  627.bugfix  636.feature  666.bugfix  682.bugfix  691.feature  799.bugfix  808.bugfix  831.bugfix  863.feature  913.bugfix  919.bugfix  93.feature  939.other  946.other  965.bugfix  (+67 more)
client/testing/: conftest.py  functional.py  reqmock.py  simpypi.py  test_config.py  test_functional.py  test_index.py  test_install.py  test_list.py  test_list_remove.py  test_login.py  test_main.py  test_push.py  test_pypirc.py  test_pytestdevpi.py  test_quickstart.py  test_remoteindex.py  test_reqmock.py  test_server.py  test_test.py  test_upload.py  test_url.py  test_use.py  test_user.py
common/: .flake8  CHANGELOG  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
common/devpi_common/: __init__.py  _compat.py  archive.py  c_url.py  contextlib.py  metadata.py  proc.py  request.py  s_url.py  terminal.py  types.py  url.py  validation.py  version.py  viewhelp.py
common/news/: 323.bugfix  496.bugfix  511.feature  641.bugfix  792.feature  895.bugfix  928.bugfix  930.feature  939.bugfix  949.bugfix  _template.rst  chdir.feature  check_output.bugfix  examples.rst  extractall.bugfix  flush.bugfix  hash.bugfix  hash_type.feature  hidepassword.feature  htmlpage.removal  lazy.feature  legacy.bugfix  legacyversion.bugfix  name_version_split.bugfix  pkg_resource_deprecation.other  pkg_resources.feature  query.feature  replacenetlocparts.feature  typing.bugfix  userurlrepr.feature  verlib.removal  version.other
common/testing/: test_archive.py  test_curl.py  test_lazydecorator.py  test_metadata.py  test_proc.py  test_request.py  test_surl.py  test_types.py  test_url.py  test_validation.py  test_version.py
debugging/: mypy.ini  pyproject.toml  setup.py  tox.ini
debugging/devpi_debugging/: main.py  views.py
postgresql/: CHANGELOG  MANIFEST.in  README.rst  conftest.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
postgresql/devpi_postgresql/: __init__.py  main.py
postgresql/devpi_postgresql_pytest/: __init__.py
postgresql/news/: 738.feature  783.feature  884.bugfix  _template.rst  conflicts.bugfix  devpi620.feature  devpi650.feature  examples.rst  locking.feature  memory.feature  native.feature  psql95.removal  python.removal  python2.removal  serialize-writes.bugfix  server620.removal  stream.feature
postgresql/pytest_devpi_postgresql/: __init__.py
server/: .flake8  469.feature  AUTHORS  CHANGELOG  MANIFEST.in  README.rst  RELEASE-TODO  TODO-projectname.txt  TODO.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
server/attic/: pypimirror.py
server/bench/: keyfs1.py  prof.py  use_yappi.py
server/devpi_server/: __init__.py  __main__.py  __version__.py  _index_refresh_form  _pip.py  auth.py  auth_basic.py  auth_devpi.py  bgserver.py  compat.py  config.py  ctl.py  db.py  events.py  exceptions.py  extpypi.py  filestore.py  filestore_db.py  filestore_fs.py  filestore_fs_base.py  filestore_hash_hl.py  fileutil.py  fsck.py  genconfig.py  gendeploy.py  hookspecs.py  htmlpage.py  httpclient.py  importexport.py  init.py  interfaces.py  keyfs.py  keyfs_sqlite.py  keyfs_sqlite_fs.py  keyfs_types.py  log.py  main.py  markers.py  middleware.py  mirror.py  (+14 more)
server/doc/: Makefile  conf.py  contact.rst  curl.rst  docserver.txt  index.rst  make.bat
server/extra/: compare_pypi_devpi.py  get_changelog.py
server/news/: 1006.bugfix  1033.bugfix  1044.bugfix  1053.bugfix  1097.bugfix  1102.bugfix  1107.bugfix  1110.bugfix  140.feature  193.feature  210.bugfix  249.feature  253.feature  345.bugfix  402.bugfix  403.bugfix  425.bugfix  430.bugfix  434.bugfix  445.bugfix  448.feature  449.bugfix  451.bugfix  477.bugfix  480.bugfix  489.bugfix  491.bugfix  494.bugfix  502-configfile.feature  502-environ.feature  502-serverdir.removal  510.bugfix  511-requires-python.feature  518.removal  520.bugfix  525.feature  530.feature  535.feature  545.bugfix  549.bugfix  (+215 more)
server/pytest_devpi_server/: __init__.py
server/test_devpi_server/: conftest.py  example.py  functional.py  plugin.py  reqmock.py  simpypi.py  test_auth.py  test_authcheck.py  test_bgserver.py  test_config.py  test_conftest.py  test_db.py  test_devpibootstrap.py  test_extpypi.py  test_filestore.py  test_filestore_fs.py  test_fileutil.py  test_fsck.py  test_genconfig.py  test_gendeploy.py  test_importexport.py  test_keyfs.py  test_keyfs_sqlite_fs.py  test_log.py  test_main.py  test_mirror.py  test_mirror_no_project_list.py  test_model.py  test_mythread.py  test_nginx.py  test_nginx_replica.py  test_permissions.py  test_readonly.py  (+19 more)
web/: .flake8  AUTHORS  CHANGELOG  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
(+373 files in other folders)
