[build-system]
requires = ["setuptools", "setuptools_changelog_shortener", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version", "readme"]
name = "devpi-client"
description = "devpi upload/install/... workflow commands for Python developers"
dependencies = [
    "build>=0.7.0",
    "check-manifest>=0.28",
    "colorama;platform_system=='Windows'",
    "devpi_common<5,>=4dev",
    "iniconfig",
    # update to 1.11.0 when dropping Python 3.7 support,
    # to get warnings about unknown metadata versions
    "pkginfo>=1.10.0",
    "platformdirs",
    "pluggy>=0.6.0,<2.0",
    "tomli; python_version < '3.11'"
]
requires-python = ">=3.7"
maintainers = [
    {name = "Florian Schulze", email = "mail@pyfidelity.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.scripts]
devpi = "devpi.main:main"


[project.entry-points.devpi_client]
devpi-client-login = "devpi.login"
devpi-client-subcommands = "devpi.main"


[project.urls]
"Bug Tracker" = "https://github.com/devpi/devpi/issues"
"Changelog" = "https://github.com/devpi/devpi/blob/main/client/CHANGELOG"
"Documentation" = "https://doc.devpi.net"
"Homepage" = "https://devpi.net"
"Source Code" = "https://github.com/devpi/devpi"


[tool.ruff]
extend = "../pyproject.toml"


[tool.ruff.lint]
extend-ignore = [
    "A001", # cleanup later - variable name shadows builtin
    "A002", # cleanup later - argument name shadows builtin
    "ARG001", # maybe cleanup later - unused function argument
    "ARG002", # maybe cleanup later - unused method argument
    "ARG005", # maybe cleanup later - unused lambda argument
    "B007", # maybe cleanup later
    "BLE001", # cleanup soon - blind exception
    "C402", # maybe cleanup later - rewrite as dict comprehension
    "C405", # cleanup soon - set literal instead of set call
    "COM812", # cleanup later
    "ERA001", # cleanup soon
    "FBT002", # cleanup soon - boolean positional argument
    "FIX003", # cleanup later - xxx
    "G002", # cleanup soon - logging statement uses %
    "I001", # maybe cleanup later - import block unsorted
    "PERF401", # maybe cleanup later - list comprehension
    "PLR0912", # maybe cleanup later
    "PLW2901", # maybe cleanup later
    "PT006", # maybe cleanup later - wrong type for pytest.mark.parametrize
    "PT007", # maybe cleanup later - wrong type for pytest.mark.parametrize
    "PT011", # cleanup soon - pytest.raises match
    "PT017", # cleanup later - use pytest.raises
    "PT018", # maybe cleanup later - composite assert
    "RET502", # maybe cleanup later - implicit return None
    "RET503", # maybe cleanup later - missing return
    "RET504", # maybe cleanup later - unnecessary assignment before return
    "RET505", # maybe cleanup later - unnecessary elif after return
    "RET506", # maybe cleanup later - unnecessary elif after raise
    "RUF005", # cleanup later
    "RUF012", # cleanup later
    "RUF100", # after soon to cleanup
    "RSE102", # maybe cleanup later
    "SIM102", # maybe cleanup later
    "SIM108", # cleanup later
    "SIM110", # cleanup soon
    "SIM117", # cleanup later
    "TRY301", # maybe cleanup later
    "UP004", # cleanup later - inherit from 'object'
    "UP015", # cleanup later - open mode parameters
    "UP025", # maybe cleanup later - unicode literals
    "UP032", # cleanup later - f-string instead of format
]


[tool.setuptools]
packages = ['devpi']


[tool.setuptools.dynamic]
version = {attr = "devpi.__version__"}
readme = {file = ["README.rst", "CHANGELOG.short.rst"]}


[tool.setuptools_changelog_shortener]
read_from = "CHANGELOG"
write_to = "CHANGELOG.short.rst"
count = 5
delimiter = "^==+"
title = "=========\nChangelog\n========="


[tool.towncrier]
package = "devpi"
filename = "CHANGELOG"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/_template.rst"

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Deprecations and Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true
