[build-system]
requires = ["setuptools", "setuptools_changelog_shortener", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version", "readme"]
name = "devpi-server"
description = "devpi-server: reliable, private, and pypi.org caching server"
dependencies = [
    "argon2-cffi",
    "attrs>=22.2.0",
    "defusedxml",
    "devpi_common<5,>3.6.0",
    "httpx<1",
    "itsdangerous>=0.24",
    "lazy",
    "legacy-cgi;python_version>='3.13'",
    "passlib[argon2]",
    "platformdirs",
    "pluggy>=0.6.0,<2.0",
    "py>=1.4.23",
    "pyramid>=2",
    "repoze.lru>=0.6",
    "strictyaml",
    "waitress>=1.0.1",
    'ruamel.yaml',
]
keywords = ["pypi", "realtime", "cache", "server"]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [
    {name = "Florian Schulze", email = "mail@pyfidelity.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP",
]


[project.urls]
"Bug Tracker" = "https://github.com/devpi/devpi/issues"
"Changelog" = "https://github.com/devpi/devpi/blob/main/server/CHANGELOG"
"Documentation" = "https://doc.devpi.net"
"Funding" = "https://github.com/sponsors/devpi"
"Homepage" = "https://devpi.net"
"Source Code" = "https://github.com/devpi/devpi"


[project.scripts]
devpi-export = "devpi_server.importexport:export"
devpi-fsck = "devpi_server.fsck:fsck"
devpi-gen-config = "devpi_server.genconfig:genconfig"
devpi-gen-secret = "devpi_server.config:gensecret"
devpi-import = "devpi_server.importexport:import_"
devpi-init = "devpi_server.init:init"
devpi-passwd = "devpi_server.passwd:passwd"
devpi-server = "devpi_server.main:main"


[project.entry-points.devpi_server]
devpi-server-auth-basic = "devpi_server.auth_basic"
devpi-server-auth-devpi = "devpi_server.auth_devpi"
devpi-server-genconfig = "devpi_server.genconfig"
devpi-server-mirror = "devpi_server.mirror"
devpi-server-model = "devpi_server.model"
devpi-server-replica = "devpi_server.replica"
devpi-server-view-auth = "devpi_server.view_auth"
devpi-server-views = "devpi_server.views"
devpi-server-sqlite = "devpi_server.keyfs_sqlite"
devpi-server-sqlite-fs = "devpi_server.keyfs_sqlite_fs"


[project.entry-points.devpi_web]
devpi-server-replica-status = "devpi_server.replica"
devpi-server-status = "devpi_server.views"


[project.entry-points.pytest11]
pytest_devpi_server = "pytest_devpi_server"


[tool.ruff]
extend = "../pyproject.toml"
target-version = "py39"


[tool.ruff.format]
exclude = [
    "devpi_server/auth.py",
    "devpi_server/auth_basic.py",
    "devpi_server/auth_devpi.py",
    "devpi_server/config.py",
    "devpi_server/exceptions.py",
    "devpi_server/filestore.py",
    "devpi_server/filestore_fs.py",
    "devpi_server/fileutil.py",
    "devpi_server/fsck.py",
    "devpi_server/genconfig.py",
    "devpi_server/hookspecs.py",
    "devpi_server/importexport.py",
    "devpi_server/init.py",
    "devpi_server/interfaces.py",
    "devpi_server/keyfs.py",
    "devpi_server/keyfs_sqlite.py",
    "devpi_server/keyfs_sqlite_fs.py",
    "devpi_server/keyfs_types.py",
    "devpi_server/log.py",
    "devpi_server/main.py",
    "devpi_server/markers.py",
    "devpi_server/middleware.py",
    "devpi_server/mirror.py",
    "devpi_server/model.py",
    "devpi_server/mythread.py",
    "devpi_server/passwd.py",
    "devpi_server/readonly.py",
    "devpi_server/replica.py",
    "devpi_server/sizeof.py",
    "devpi_server/vendor/_pip.py",
    "devpi_server/view_auth.py",
    "devpi_server/views.py",
    "pytest_devpi_server/__init__.py",
    "test_devpi_server/conftest.py",
    "test_devpi_server/example.py",
    "test_devpi_server/functional.py",
    "test_devpi_server/plugin.py",
    "test_devpi_server/simpypi.py",
    "test_devpi_server/test_auth.py",
    "test_devpi_server/test_authcheck.py",
    "test_devpi_server/test_config.py",
    "test_devpi_server/test_conftest.py",
    "test_devpi_server/test_filestore.py",
    "test_devpi_server/test_fileutil.py",
    "test_devpi_server/test_fsck.py",
    "test_devpi_server/test_genconfig.py",
    "test_devpi_server/test_importexport.py",
    "test_devpi_server/test_keyfs.py",
    "test_devpi_server/test_keyfs_sqlite_fs.py",
    "test_devpi_server/test_log.py",
    "test_devpi_server/test_main.py",
    "test_devpi_server/test_mirror.py",
    "test_devpi_server/test_mirror_no_project_list.py",
    "test_devpi_server/test_model.py",
    "test_devpi_server/test_mythread.py",
    "test_devpi_server/test_nginx.py",
    "test_devpi_server/test_nginx_replica.py",
    "test_devpi_server/test_permissions.py",
    "test_devpi_server/test_replica.py",
    "test_devpi_server/test_replica_functional.py",
    "test_devpi_server/test_stage_customizer.py",
    "test_devpi_server/test_streaming.py",
    "test_devpi_server/test_streaming_nginx.py",
    "test_devpi_server/test_streaming_replica.py",
    "test_devpi_server/test_streaming_replica_nginx.py",
    "test_devpi_server/test_view_auth.py",
    "test_devpi_server/test_views.py",
    "test_devpi_server/test_views_patch.py",
    "test_devpi_server/test_views_push_external.py",
    "test_devpi_server/test_views_status.py",
]


[tool.ruff.lint]
extend-ignore = [
    "A001", # cleanup later - variable name shadows builtin
    "A002", # cleanup later - argument name shadows builtin
    "ARG001", # maybe cleanup later - unused function argument
    "ARG002", # maybe cleanup later - unused method argument
    "ARG005", # maybe cleanup later - unused lambda argument
    "B007", # maybe cleanup later
    "B008", # cleanup later
    "B904", # maybe cleanup later
    "BLE001", # cleanup soon - blind exception
    "C400", # maybe cleanup later - rewrite as list comprehension
    "C401", # maybe cleanup later - rewrite as set comprehension
    "C402", # maybe cleanup later - rewrite as dict comprehension
    "C405", # cleanup soon - set literal instead of set call
    "DTZ001", # cleanup soon
    "ERA001", # cleanup soon
    "FBT002", # cleanup soon - boolean positional argument
    "FIX001", # cleanup later - fixme
    "FIX003", # cleanup later - xxx
    "FLY002", # maybe cleanup later - f-string instead of join
    "G002", # cleanup soon - logging statement uses %
    "PERF401", # maybe cleanup later - list comprehension
    "PLR0911", # cleanup later
    "PLR0912", # maybe cleanup later
    "PLW2901", # maybe cleanup later
    "PT006", # maybe cleanup later - wrong type for pytest.mark.parametrize
    "PT007", # maybe cleanup later - wrong type for pytest.mark.parametrize
    "PT011", # cleanup soon - pytest.raises match
    "PT012", # cleanup soon - pytest.raises
    "PT018", # maybe cleanup later - composite assert
    "RET501", # maybe cleanup later - no explicit return None
    "RET502", # maybe cleanup later - implicit return None
    "RET503", # maybe cleanup later - missing return
    "RET504", # maybe cleanup later - unnecessary assignment before return
    "RET505", # maybe cleanup later - unnecessary elif after return
    "RET506", # maybe cleanup later - unnecessary elif after raise
    "RET507", # maybe cleanup later - unnecessary elif after continue
    "RUF005", # cleanup later
    "RUF012", # cleanup later
    "RUF100", # after soon to cleanup
    "RSE102", # maybe cleanup later
    "SIM102", # maybe cleanup later
    "SIM105", # cleanup soon
    "SIM108", # cleanup later
    "SIM117", # cleanup later
    "UP004", # cleanup later - inherit from 'object'
    "UP008", # cleanup later - super
    "UP012", # false positives (bug in ruff?) - unnecessary utf-8 encode
    "UP024", # maybe cleanup later - aliased errors
    "UP025", # maybe cleanup later - unicode literals
    "UP032", # cleanup later - f-string instead of format
]


[tool.ruff.lint.extend-per-file-ignores]
"devpi_server/__main__.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/config.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/filestore.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/fileutil.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/genconfig.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/hookspecs.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/importexport.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/interfaces.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/keyfs.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/keyfs_sqlite.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/keyfs_sqlite_fs.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/main.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/mirror.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/model.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/readonly.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/sizeof.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/vendor/_pip.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/view_auth.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"devpi_server/views.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/plugin.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_config.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_filestore.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_fileutil.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_genconfig.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_importexport.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_keyfs.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_log.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_main.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_mirror.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_model.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_nginx_replica.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_permissions.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_replica.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_replica_functional.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_streaming_nginx.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_streaming_replica.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_streaming_replica_nginx.py" = [
    "I001", # maybe cleanup later - import block unsorted
]
"test_devpi_server/test_views.py" = [
    "I001", # maybe cleanup later - import block unsorted
]


[tool.setuptools]
packages = [
    'devpi_server',
    'devpi_server.cfg',
    'devpi_server.vendor',
    'pytest_devpi_server',
    'test_devpi_server',
]


[tool.setuptools.dynamic]
version = {attr = "devpi_server.__version__"}
readme = {file = ["README.rst", "CHANGELOG.short.rst"]}


[tool.setuptools_changelog_shortener]
read_from = "CHANGELOG"
write_to = "CHANGELOG.short.rst"
count = 5
delimiter = "^==+"
title = "=========\nChangelog\n========="


[tool.towncrier]
package = "devpi_server"
filename = "CHANGELOG"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/_template.rst"

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Deprecations and Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true
